--- a/LV2/Taskie/app/build.gradle
+++ b/LV2/Taskie/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.mosaicapps.lv2"
+        applicationId "hr.ferit.taskie"
         minSdk 23
         targetSdk 31
         versionCode 1
@@ -37,9 +37,6 @@ android {
     }
 }
 
-
-
-
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -51,7 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Navigation component:
-    def version_navigation = "2.4.1"
-    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
-    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
+    implementation navigation_fragment_ktx
+    implementation navigation_ui_ktx
 }
